--- a/index.html
+++ b/index.html
@@ -203,7 +203,7 @@
   </section>
   <footer>
     <div class="download-button">
-      <a href="Desktop/NEW PROJECT/Portfolio/resume.pdf" download>
+      <a href="resume.pdf" download>
           Download Resume
       </a>
   </div>
