--- a/index.html
+++ b/index.html
@@ -137,7 +137,7 @@
       <h1>Welcome to My Website</h1>
       <p>This is the homepage of my website. You can scroll down to learn more about me.</p>
       </div>
-    <img src="Photo.jpg">
+    <img src="src/Photo.jpg">
   </section>
 
   <section id="about">
@@ -193,7 +193,7 @@
   </section>
   <footer>
     <div class="download-button">
-      <a href="resume.pdf" download>
+      <a href="src/resume.pdf" download>
           Download Resume
       </a>
   </div>
