--- a/index.html
+++ b/index.html
@@ -5,6 +5,9 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Rujal Shrestha - CV</title>
   <style>
+    html{
+      scroll-behavior: smooth;
+    }
     body {
       font-family: 'Times New Roman', Times, serif;
       margin: 0;
