updating social media links

--- a/index.html
+++ b/index.html
@@ -126,21 +126,21 @@
 
           <ul class="social-list">
             <li class="social-item">
-              <a href="#" class="social-link">
-                <ion-icon name="logo-linkedin"></ion-icon>
+              <a href="https://www.linkedin.com/in/rujal-shrestha-1423402a8/" class="social-link" target="_blank" rel="noopener noreferrer">
+              <ion-icon name="logo-linkedin"></ion-icon>
               </a>
             </li>
 
             <li class="social-item">
-              <a href="#" class="social-link">
+                <a href="https://github.com/Rujalrambo" class="social-link" target="_blank" rel="noopener noreferrer">
                 <ion-icon name="logo-github"></ion-icon>
-              </a>
+                </a>
             </li>
 
             <li class="social-item">
-              <a href="#" class="social-link">
+                <a href="https://www.instagram.com/rujals/" class="social-link" target="_blank" rel="noopener noreferrer">
                 <ion-icon name="logo-instagram"></ion-icon>
-              </a>
+                </a>
             </li>
           </ul>
         </div>
