commenting client sections

--- a/index.html
+++ b/index.html
@@ -126,21 +126,36 @@
 
           <ul class="social-list">
             <li class="social-item">
-              <a href="https://www.linkedin.com/in/rujal-shrestha-1423402a8/" class="social-link" target="_blank" rel="noopener noreferrer">
-              <ion-icon name="logo-linkedin"></ion-icon>
+              <a
+                href="https://www.linkedin.com/in/rujal-shrestha-1423402a8/"
+                class="social-link"
+                target="_blank"
+                rel="noopener noreferrer"
+              >
+                <ion-icon name="logo-linkedin"></ion-icon>
               </a>
             </li>
 
             <li class="social-item">
-                <a href="https://github.com/Rujalrambo" class="social-link" target="_blank" rel="noopener noreferrer">
+              <a
+                href="https://github.com/Rujalrambo"
+                class="social-link"
+                target="_blank"
+                rel="noopener noreferrer"
+              >
                 <ion-icon name="logo-github"></ion-icon>
-                </a>
+              </a>
             </li>
 
             <li class="social-item">
-                <a href="https://www.instagram.com/rujals/" class="social-link" target="_blank" rel="noopener noreferrer">
+              <a
+                href="https://www.instagram.com/rujals/"
+                class="social-link"
+                target="_blank"
+                rel="noopener noreferrer"
+              >
                 <ion-icon name="logo-instagram"></ion-icon>
-                </a>
+              </a>
             </li>
           </ul>
         </div>
@@ -268,16 +283,12 @@
                   </p>
                 </div>
               </li>
-
-              
             </ul>
           </section>
 
-          <!--
-          - testimonials
-        -->
+          <!--- testimonials -->
 
-          <div class="modal-container" data-modal-container>
+          <!-- <div class="modal-container" data-modal-container>
             <div class="overlay" data-overlay></div>
 
             <section class="testimonials-modal">
@@ -315,13 +326,11 @@
                 </div>
               </div>
             </section>
-          </div>
+          </div> -->
 
-          <!--
-          - clients
-        -->
+          <!--- clients --->
 
-
+          <!-- 
           <h3 class="h3 clients-title">Clients</h3>
 
           <ul class="clients-list has-scrollbar">
@@ -365,7 +374,7 @@
           </ul>
 
         </section>
-        </article> -->
+        --></article>
 
         <!--
         - #RESUME
