--- a/index.html
+++ b/index.html
@@ -512,12 +512,12 @@
 
               <li class="skills-item">
                 <div class="title-wrapper">
-                  <h5 class="h5">LARAVEL</h5>
-                  <data value="50">70%</data>
+                  <h5 class="h5">FLUTTER</h5>
+                  <data value="40">40%</data>
                 </div>
 
                 <div class="skill-progress-bg">
-                  <div class="skill-progress-fill" style="width: 50%"></div>
+                  <div class="skill-progress-fill" style="width: 40%"></div>
                 </div>
               </li>
             </ul>
