--- a/index.html
+++ b/index.html
@@ -288,7 +288,7 @@
 
           <!--- testimonials -->
 
-          <!-- <div class="modal-container" data-modal-container>
+          <div class="modal-container" data-modal-container>
             <div class="overlay" data-overlay></div>
 
             <section class="testimonials-modal">
@@ -326,12 +326,12 @@
                 </div>
               </div>
             </section>
-          </div> -->
+          </div>
 
           <!--- clients --->
 
-          <!-- 
-          <h3 class="h3 clients-title">Clients</h3>
+          
+          <!-- <h3 class="h3 clients-title">Clients</h3>
 
           <ul class="clients-list has-scrollbar">
 
@@ -371,10 +371,10 @@
               </a>
             </li>
 
-          </ul>
+          </ul> -->
 
         </section>
-        --></article>
+       </article>
 
         <!--
         - #RESUME
